Fix gap

--- a/radio-cards-component/css/style.css
+++ b/radio-cards-component/css/style.css
@@ -30,7 +30,10 @@ body {
   padding: 0;
   display: flex;
   align-items: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 24px;
+  row-gap: 30px;
 }
 .sr-only {
   position: absolute;
